# CarND

./: .gitignore  README.md  traffic-sign-classification-with-keras.ipynb
.ipynb_checkpoints/: traffic-sign-classification-with-keras-checkpoint.ipynb
CarND-LeNet-Lab/: LeNet-Lab.ipynb
Project1_LaneDetection/: P1.ipynb  Project1_Lane_Finding.ipynb  submission_beta.py  submission_official.py
Term1_Project1_LaneDetection/: README.md  submission_official.py
Term1_Week1/: Quiz2_ColorRegion.py  Quiz3_IntroCV.py  quiz3_houghtransformation.py
Term1_Week2/: README.md
Term1_Week3/: 2_tensorflow_placeholder.py  3_tensorflow_math.py  4_tensorflow_linear_function.py  5_tensorflow_softmax.py  6_tensorflow_onehot_enconding.py  traffic-sign-classification-with-keras.ipynb
Term1_Week5_ConvNets/: 1_ConvNets_TF_ConvLayer.py  LeNet_model.ckpt.data-00000-of-00001
Term2_CarND-Extended-Kalman-Filter-Project/: .gitignore  data_in.txt  data_out.txt  output.txt
Term2_P1_Extended_Kalman_Filter/: .gitignore  CMakeLists.txt
Term2_P1_Extended_Kalman_Filter/include/: kalman_filter.h  measurement_package.h  tracking.h
Term2_P1_Extended_Kalman_Filter/src/: kalman_filter.cpp  main.cpp  measurement_package.cpp  tracking.cpp
Week1/: Quiz1_ColorSelection.py
Week2/: README.md~
Week2_NeutralNetwork/: MiniFlowTestRun.py  README  miniflow.py
Week3/: 10_tensorflow_combining_everything.py  1_intro_tensorflow.py  4_tensorflow_linear_function.py  9_tensorflow_mini_batch.py  helper.py
Week4/: 1_DeepNet_ReLU.py  3_DeepNet_TensorBoard.py
Week5_ConvNets/: 2_ConvsNet_LeNet.py  checkpoint  (+5 more)
(+56 files in other folders)
